[package]
name = "stable-bloom-filter"
version = "0.1.0"
authors = ["u2 <zhangyaning1985@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust-implementation of a stable Bloom filter for filtering duplicates out of data streams."
repository = "https://github.com/u2/stable-bloom-filter"

[dependencies]
rand = "0.7"
