[package]
name = "stable-bloom-filter"
version = "0.3.0"
authors = ["u2 <zhangyaning1985@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust-implementation of a stable Bloom filter for filtering duplicates out of data streams."
repository = "https://github.com/u2/stable-bloom-filter"

[dependencies]
rand = "0.7"

[dev-dependencies]
criterion = "0.2"
float-cmp = "0.5"
rand = "0.7"

[[bench]]
name = "buckets"
harness = false

[[bench]]
name = "stable"
harness = false
